ADD swagger doc to several methods
